fixed icon alignement in sidebar

--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -55,16 +55,17 @@
 }
 .icon{
     margin-left: 1.25em;
-    height: 40px;
+    height: 50px;
     width: 40px;
     max-height: 50px;
     max-width: 50px;
-    display: block;
+    display: flex;
+    align-items: center;
     object-fit: contain;
     cursor: pointer;
 }
 .iconImage{
-    height: 100%;
+    height: 80%;
     width: 100%;
 }
 .text{
